--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: windows_version_native_info
 description: A new Flutter plugin project.
-version: 0.0.1
-# homepage:
+version: 1.0.0
+homepage: https://github.com/ekokurniadi/windows_version_native_info
+
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
